--- a/front/src/css/pages/Contact.css
+++ b/front/src/css/pages/Contact.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   margin-top: 4rem;
+  height: 100vh;
 }
 
 .contact-form {
@@ -11,7 +12,12 @@
   gap: 1rem;
   width: 320px;
 }
-
+.header {
+  font-size: 2rem;
+  color: #000000;
+  margin-bottom: 1rem;
+  margin-top: 0px;
+}
 .contact-form input,
 .contact-form textarea {
   padding: 0.75rem;
@@ -24,7 +30,7 @@
   padding: 0.75rem;
   border: none;
   border-radius: 8px;
-  background-color: #007bff;
+  background-color: rgb(0, 113, 227);
   color: white;
   font-weight: bold;
   cursor: pointer;
