--- a/front/src/css/App.css
+++ b/front/src/css/App.css
@@ -1,10 +1,12 @@
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
   height: 100%;
   overflow-y: scroll;
   -ms-overflow-style: none;
   scrollbar-width: none;
+  background-color: rgb(3, 7, 17);
 }
 
 html::-webkit-scrollbar,
