--- a/front/src/css/components/Navbar.css
+++ b/front/src/css/components/Navbar.css
@@ -3,13 +3,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  background: #22c1c3;
-  background: linear-gradient(
-    0deg,
-    rgba(255, 255, 255, 0) 0%,
-    rgb(255, 255, 255) 50%
-  );
-  color: white;
+  background: linear-gradient(0deg, rgba(3, 7, 17, 0) 0%, rgb(3, 7, 17) 50%);
   z-index: 1000;
   padding: 15px 0;
 }
@@ -19,13 +13,14 @@
   justify-content: space-between;
   align-items: center;
 
-  max-width: 1000px;
+  max-width: 1100px;
   margin: 0 auto;
   padding: 0 2rem;
 }
 
 .navbar-brand a {
-  color: rgb(0, 0, 0);
+  color: #f9fafb;
+  font-family: "Inter", sans-serif;
   text-decoration: none;
   font-size: 18px;
   font-weight: bold;
@@ -35,6 +30,7 @@
   display: flex;
   gap: 35px;
   background-color: #e6e6e64d;
+
   border-radius: 30px;
   padding: 15px 30px;
   border: 1px solid rgba(0, 0, 0, 0.425);
@@ -42,6 +38,6 @@
 }
 
 .nav-link {
-  color: rgb(0, 0, 0);
+  color: #f9fafb;
   text-decoration: none;
 }
