--- a/front/src/css/pages/Home.css
+++ b/front/src/css/pages/Home.css
@@ -1,5 +1,4 @@
 .home {
-  background-color: rgb(255, 255, 255);
   display: block;
   justify-content: center;
   align-items: center;
@@ -11,8 +10,32 @@
   text-align: center;
   margin-top: 37vh;
   margin-bottom: 50vh;
+  color: #f9fafb;
 }
 
+.hero-arrow {
+  margin-top: 10rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.hero-arrow svg {
+  width: 20px;
+  height: 20px;
+  color: #000000; /* red-ish */
+  stroke-width: 1.5;
+  animation: arrow-bounce 1.6s infinite;
+}
+@keyframes arrow-bounce {
+  0%,
+  100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(10px);
+  }
+}
 .hero-name h5 {
   margin-bottom: 0px;
   font-size: 15px;
@@ -22,6 +45,7 @@
   padding-left: 5px;
   padding-right: 5px;
   font-size: 14px;
+  color: #f9fafb;
 }
 
 .hero a {
@@ -30,6 +54,7 @@
   padding-right: 5px;
   font-size: 14px;
   text-decoration: none;
+  color: #f9fafb;
 }
 
 .hero-links {
@@ -44,10 +69,11 @@
   align-items: flex-start;
   gap: 5rem;
   padding: 6rem 4rem;
-  color: #000000a6;
   border-radius: 20px;
   max-width: 1100px;
   margin: 15vh auto;
+  color: #f9fafb;
+  font-family: "Inter", sans-serif;
 }
 
 .about-left {
@@ -55,7 +81,7 @@
 }
 
 .about-left h5 {
-  color: #000000;
+  color: #f9fafb;
   font-size: 0.9rem;
   letter-spacing: 2px;
   text-transform: uppercase;
@@ -65,7 +91,7 @@
 .about-left h1 {
   font-size: 2.8rem;
   margin-bottom: 1.5rem;
-  color: #000000;
+  color: #f9fafb;
 }
 
 .highlight {
@@ -84,11 +110,12 @@
   gap: 10px;
   margin-bottom: 0.8rem;
   font-size: 1rem;
-  color: #5f5f5f;
+  color: rgb(156, 163, 176);
+  font-family: "Inter", sans-serif;
 }
 
 .info-icon {
-  color: #000000;
+  color: #e5e7eb;
   width: 20px;
   height: 20px;
   flex-shrink: 0;
@@ -97,7 +124,8 @@
 .about-left p {
   line-height: 1.6;
   margin-bottom: 2rem;
-  color: #000000;
+  color: #f9fafb;
+  font-family: "Inter", sans-serif;
   font-size: 20px;
 }
 
@@ -111,7 +139,6 @@
 }
 
 .about-right h3 {
-  color: #000000;
   margin-bottom: 1rem;
 }
 
@@ -123,14 +150,13 @@
 }
 
 .skills-grid span {
-  background-color: #e6e6e64d;
-  border: 1px solid rgba(0, 0, 0, 0.425);
-  box-shadow: 0px 3px 5px #999;
-  border-radius: 30px;
+  background-color: #f9fafb;
+  border-radius: 10px;
   padding: 0.6rem 1rem;
   text-align: center;
   font-size: 0.9rem;
   transition: background 0.3s ease;
+
   color: #000000;
 }
 
@@ -148,11 +174,10 @@
   display: flex;
   align-items: center;
   gap: 1rem;
-  background: #ffffff;
   padding: 1rem;
   border-radius: 12px;
   transition: transform 0.3s ease, background 0.3s ease;
-  border: 1px solid rgba(0, 0, 0, 0.425);
+  border: 1px solid rgb(31, 41, 55);
 }
 
 .cert-item:hover {
@@ -170,12 +195,14 @@
 }
 
 .cert-item strong {
-  color: #000000;
   font-size: 1rem;
+  color: #f9fafb;
+  font-family: "Inter", sans-serif;
 }
 
 .cert-item p {
-  color: #555555;
+  color: #d1d5db;
+  font-family: "Inter", sans-serif;
   font-size: 0.9rem;
   margin: 0.2rem 0 0 0;
 }
