--- a/front/src/css/components/Footer.css
+++ b/front/src/css/components/Footer.css
@@ -2,8 +2,15 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-
+  color: #9ca3b0;
   max-width: 1100px;
   margin: 0 auto;
-  padding: 0 2rem;
+  padding: 5rem 2rem;
+  font-family: "Inter", sans-serif;
+  text-decoration: none;
+}
+
+.link {
+  color: #9ca3b0;
+  text-decoration: none;
 }
