--- a/front/src/css/pages/Contact.css
+++ b/front/src/css/pages/Contact.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 4rem;
+  margin-top: 14.5rem;
   height: 100vh;
 }
 
@@ -14,26 +14,39 @@
 }
 .header {
   font-size: 2rem;
-  color: #000000;
+  font-family: "Inter", sans-serif;
+  font-size: 2rem;
+  color: #ffffff;
   margin-bottom: 1rem;
   margin-top: 0px;
 }
+
 .contact-form input,
 .contact-form textarea {
-  padding: 0.75rem;
+  padding: 10px;
   border-radius: 8px;
-  border: 1px solid #ccc;
-  font-size: 1rem;
+  border: 1px solid rgb(31, 41, 55);
+
+  font-size: 15px;
+
+  background: rgb(3, 7, 17);
+  color: white;
+  resize: none;
 }
 
 .contact-form button {
-  padding: 0.75rem;
+  padding: 10px;
+  background-color: rgb(0, 113, 227);
+  font-family: "Inter", sans-serif;
+  color: white;
   border: none;
   border-radius: 8px;
-  background-color: rgb(0, 113, 227);
-  color: white;
-  font-weight: bold;
   cursor: pointer;
+  transition: background 0.3s;
+}
+
+.contact-form button:hover {
+  background-color: #0056b3;
 }
 
 .contact-form button:disabled {
