--- a/front/src/css/App.css
+++ b/front/src/css/App.css
@@ -3,13 +3,23 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
-  overflow-y: scroll;
-  -ms-overflow-style: none;
-  scrollbar-width: none;
   background-color: rgb(3, 7, 17);
 }
 
 html::-webkit-scrollbar,
 body::-webkit-scrollbar {
   display: none;
+}
+
+.main-content {
+  animation: fadeIn 0.3s ease-in-out;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
